glibc (2.22-13) UNRELEASED; urgency=medium

  [ Aurelien Jarno ]
  * debian/patches/mips/submitted-vfork.diff: new patch to fix ABI change and
    testsuite on mips*.
  * debian/patches/sparc/submitted-vfork.diff: new patch to fix ABI change and
    testsuite on sparc*.

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 20 Jun 2016 00:24:17 +0200

glibc (2.22-12) unstable; urgency=medium

  [ Aurelien Jarno ]
  * Update from upstream stable branch:
    - fix FTBFS with recent binutils versions on mips* and sparc*.  Closes:
      #827477.
  * debian/sysdeps/kfreebsd-i386.mk: fix libc0.1-i686 package name.
  * debian/rules.d/build.mk: in case of build failure due testsuite
    issues, display again the failed tests so that they appear at the end of
    the build log.
  * debian/local/etc/nsswitch.conf: add gshadow line to default
    /etc/nsswitch.conf (addresses #699090).
  * debian/debhelper.in/libc-bin.postinst: update /etc/nsswitch.conf to the
    current default if it matches a version shipped by base-files or
    libc-bin. This is based on a patch from Santiago Vila, thanks.  Closes:
    #827105.

  [ Samuel Thibault ]
  * hurd-i386/tg-eintr.diff: New patch to fix "Interrupted" issues in ghc.

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 20 Jun 2016 00:01:21 +0200

glibc (2.22-11) unstable; urgency=medium

  [ Samuel Thibault ]
  * hurd-i386/tg-poll_errors_fixes.diff: Fix crash when calling poll or select
    on a fd which had never been allocated.  Closes: #826175.
  * hurd-i386/tg-faccessat.diff: Finish faccessat implementation. Fixes
    findutils.  Closes: #823027.

  [ Aurelien Jarno ]
  * Update from upstream stable branch.
  * debian/control: re-add libc0.1-i686, libc0.3-i686, libc6-i686 as a
    dummy package to ease the upgrades.  Closes: #825421, #826290.
  * debian/sysdeps/i386.mk: add libc6-i686 dummy package.
  * debian/sysdeps/hurd-i386.mk: add libc0.1-i686 dummy package.
  * debian/sysdeps/kfreebsd-i386.mk: add libc0.3-i686 dummy package.