@@ -3,16 +3,16 @@ extra_cflags = -mno-plt
 
 # main library
 libc_rtlddir = /lib64
-libc_CC = $(CC) -march=mips3 -mtune=mips64r2
-libc_CXX = $(CXX) -march=mips3 -mtune=mips64r2
+libc_CC = $(CC) -march=mips64 -mtune=mips64r2
+libc_CXX = $(CXX) -march=mips64 -mtune=mips64r2
 
 # build 32-bit (n32) alternative library
 GLIBC_MULTILIB_PASSES += mipsn32
 DEB_ARCH_MULTILIB_PACKAGES += libc6-mipsn32 libc6-dev-mipsn32
 libc6-mipsn32_shlib_dep = libc6-mipsn32 (>= $(shlib_dep_ver))
 mipsn32_configure_target = mips64el-linux-gnuabin32
-mipsn32_CC = $(CC) -mabi=n32 -march=mips3 -mtune=mips64r2
-mipsn32_CXX = $(CXX) -mabi=n32 -march=mips3 -mtune=mips64r2
+mipsn32_CC = $(CC) -mabi=n32 -march=mips64 -mtune=mips64r2
+mipsn32_CXX = $(CXX) -mabi=n32 -march=mips64 -mtune=mips64r2
 mipsn32_rtlddir = /lib32
 mipsn32_slibdir = /lib32
 mipsn32_libdir = /usr/lib32
@@ -22,8 +22,8 @@ GLIBC_MULTILIB_PASSES += mips32
 DEB_ARCH_MULTILIB_PACKAGES += libc6-mips32 libc6-dev-mips32
 libc6-mips32_shlib_dep = libc6-mips32 (>= $(shlib_dep_ver))
 mips32_configure_target = mipsel-linux-gnu
-mips32_CC = $(CC) -mabi=32 -march=mips2 -mtune=mips32r2
-mips32_CXX = $(CXX) -mabi=32 -march=mips2 -mtune=mips32r2
+mips32_CC = $(CC) -mabi=32 -march=mips32 -mtune=mips32r2
+mips32_CXX = $(CXX) -mabi=32 -march=mips32 -mtune=mips32r2
 mips32_rtlddir = /lib
 mips32_slibdir = /libo32
 mips32_libdir = /usr/libo32
