@@ -5,6 +5,8 @@ glibc (2.22-13) UNRELEASED; urgency=medium
     testsuite on mips*.
   * debian/patches/sparc/submitted-vfork.diff: new patch to fix ABI change and
     testsuite on sparc*.
+  * debian/sysdeps/mipsel.mk, debian/sysdeps/mips64el.mk: bump ISA to MIPS32
+    and MIPS64.
 
  -- Aurelien Jarno <aurel32@debian.org>  Mon, 20 Jun 2016 00:24:17 +0200
 
